--- a/cs61a/test.ipynb
+++ b/cs61a/test.ipynb
@@ -1136,6 +1136,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Link(165, Link(541, Link(425)))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Link:\n",
+    "    \"\"\"Using class to present Linked List\"\"\"\n",
+    "    empty = ()\n",
+    "    def __init__(self, first, rest=empty):\n",
+    "        assert rest == Link.empty or isinstance(rest, Link), 'rest must be Link type or empty'\n",
+    "        self.first = first\n",
+    "        self.rest = rest\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        if self.rest != Link.empty:\n",
+    "            rest_repr = ', ' + repr(self.rest)\n",
+    "        else:\n",
+    "            rest_repr = ''\n",
+    "        return 'Link(' + repr(self.first) + rest_repr + ')'\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        string = '<'\n",
+    "        while self.rest != Link.empty:\n",
+    "            string += str(self.first) + ' '\n",
+    "            self = self.rest \n",
+    "        return string + str(self.first) + '>'\n",
+    "\n",
+    "link = Link(165, Link(541, Link(425)))\n",
+    "link\n",
+    "#print(link)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
