--- a/cs61a/test.ipynb
+++ b/cs61a/test.ipynb
@@ -1180,6 +1180,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<1 2 3>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Link:\n",
+    "\n",
+    "    empty = ()\n",
+    "    def __init__(self, first, rest=empty):\n",
+    "        assert rest is Link.empty or isinstance(rest, Link)\n",
+    "        self.first = first\n",
+    "        self.rest = rest \n",
+    "\n",
+    "    def __getitem__(self, i):\n",
+    "        if i == 0:\n",
+    "            return self.first\n",
+    "        else:\n",
+    "            return self.rest[i - 1]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return 1 + len(self.rest)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        if self.rest is not Link.empty:\n",
+    "            rest_repr = ', ' + repr(self.rest)\n",
+    "        else:\n",
+    "            rest_repr = ''\n",
+    "        return 'Link(' + str(self.first) + rest_repr + ')'\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        string = '<'\n",
+    "        while self.rest is not Link.empty:\n",
+    "            string += str(self.first) + ' '\n",
+    "            self = self.rest \n",
+    "        return string + str(self.first) + '>'\n",
+    "    \n",
+    "\n",
+    "link = Link(1, Link(2, Link(3)))\n",
+    "print(link)\n",
+    "link[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tree(1, [Tree(4, [Tree(441)]), Tree(9)])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Tree:\n",
+    "    def __init__(self, label, branches=[]):\n",
+    "        for branch in branches:\n",
+    "            assert isinstance(branch, Tree)\n",
+    "        self.label = label\n",
+    "        self.branches = list(branches)\n",
+    "\n",
+    "    \n",
+    "    def is_leaf(self):\n",
+    "        return not self.branches\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        if self.branches:\n",
+    "            return 'Tree({0}, {1})'.format(self.label, self.branches)\n",
+    "        else:\n",
+    "            return 'Tree({0})'.format(self.label)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        def print_tree(t, indent=0):\n",
+    "            str_tree = '    ' * indent + str(t.label)  +  '\\n'\n",
+    "            for b in t.branches:\n",
+    "                str_tree += print_tree(b, indent + 1)\n",
+    "            return str_tree\n",
+    "        return print_tree(self)\n",
+    "\n",
+    "    def map(self, fn):\n",
+    "        self.label = fn(self.label)\n",
+    "        for b in self.branches:\n",
+    "            b.map(fn)\n",
+    "    \n",
+    "    def __contains__(self, value):\n",
+    "        if self.label == value:\n",
+    "            return True\n",
+    "        for b in self.branches:\n",
+    "            if value in b:\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "t = Tree(1, [Tree(2, [Tree(21)]), Tree(3)])\n",
+    "#print(t)\n",
+    "t.map(lambda x : x * x)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
