--- a/cs61a/test.ipynb
+++ b/cs61a/test.ipynb
@@ -1349,6 +1349,16 @@
     "plt.plot(squares)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5, 2):\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
