--- a/cs61a/test.ipynb
+++ b/cs61a/test.ipynb
@@ -932,9 +932,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      2\u001b[0m squares \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m25\u001b[39m]\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(squares)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "squares = [1, 4, 9, 16, 25]\n",
@@ -1014,6 +1026,135 @@
    ],
    "source": [
     "print(2 << 63)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.11111111 0.22222222 0.33333333 0.44444444 0.55555556\n",
+      " 0.66666667 0.77777778 0.88888889 1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.linspace(0, 1, 10)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.zeros((3, 2))\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[94303747629517              0]\n",
+      " [94289865230672 94289865281392]]\n",
+      "[[0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.empty([2, 2], dtype=int)\n",
+    "b = np.zeros((2, 2), dtype=int)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1, 2}\n",
+    "print(type(a))\n",
+    "b = set()\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Queue:\n",
+    "    def __init__(self):\n",
+    "        self.queue = []\n",
+    "    def add(self, e):\n",
+    "        self.queue.append(e)\n",
+    "    def pop(self):\n",
+    "        if len(self.queue) == 0:\n",
+    "            return None\n",
+    "        res = self.queue[0]\n",
+    "        self.queue = self.queue[1:]\n",
+    "        return res\n",
+    "\n",
+    "queue = Queue()\n",
+    "queue.add(1)\n",
+    "queue.add(2)\n",
+    "queue.add(3)\n",
+    "b = queue.pop()\n",
+    "print(b)\n",
+    "b = queue.pop()\n",
+    "print(b)\n",
+    "b = queue.pop()\n",
+    "print(b)\n",
+    "b = queue.pop()\n",
+    "print(b)"
    ]
   },
   {
